--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h1> I'm <span class="grz">Grz</span>egorz</h1>
 
-    <h2>But people call me Zwykły Andrzej</h2>
+    <h2>But people call me <br />Zwykły Andrzej</h2>
 
     <img class="chmurka1" src="images/cloud.png" alt="chmurka">
     <img class="chmurka2" src="images/cloud.png" alt="chmurka">
@@ -64,7 +64,7 @@
   <div class="bottom-container"> <br />
     <a class="footer-link" href="https://www.linkedin.com/in/grzegorz-prochownik-b2b180ba/" target="_blank">LinkedIn</a> <br />
 
-    <p>images used:</p>
+    <p class="img-used">images used:</p>
       <ul class="list">
         <li><a href="https://www.flaticon.com/free-icons/dachshund" target="_blank" title="dachshund icons">Dachshund icons created by Icongeek26 - Flaticon</a></li>
         <li><a href="https://www.flaticon.com/free-icons/one" target="_blank" title="one icons">One icons created by Google - Flaticon</a></li>
